--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,3 +150,15 @@ p {
     background-color: #000000;
   }
 }
+
+@media only screen and (max-width: 980px) {
+  .navbar-header {
+    background-color: #000000;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .navbar-header {
+    background-color: #000000;
+  }
+}
